--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,20 @@
-html,
-body {
+*{
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.text-darker {
+  color:#000;
 }
 
-* {
-  box-sizing: border-box;
+.font {
+  font-size: 1.2rem;
+  font-weight: 500;
 }
+
+.font:hover {
+  color: #000;
+}
+
+
