--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,13 +9,11 @@
 }
 
 .font {
-  font-size: 1.2rem;
-  font-weight: 500;
+  font-size: 1.3rem;
+  font-weight: 400;
 }
 
-.font:hover {
-  color: #000;
-}
+
 
 .font-1 {
   font-size: 1.1rem;
@@ -26,5 +24,28 @@
   color: #000;
 }
 
+.link-wp {
+  background-color: #00E676;
+  color: white;
+}
 
+.link-wp:hover {
+  background-color: #16d177;
+  color: white;
+}
 
+.link-btn-home {
+  background-color: #FC0318;
+  color:white;
+}
+
+.link-btn-home:hover {
+  background-color: #da1b2b;
+  color:white;
+}
+
+@media only screen and (min-width: 768px) { 
+  .p-lg-2 {
+    padding: 10px;
+  }
+}
