--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,15 +4,12 @@
   margin: 0;
 }
 
-/*font-family: 'Open Sans', sans-serif;
-font-family: 'Playfair Display', serif;*/
+/*font-family: 'Open Sans', sans-serif - 300 - 400 - 700 ;
+font-family: 'Playfair Display', serif; - 400 - 500 - 800 */
 
- Nav.text-darker {
-  color:#000;
-}
 
 .font {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   font-weight: 800;
   font-family: 'Playfair Display', serif;
 }
@@ -22,6 +19,12 @@ font-family: 'Playfair Display', serif;*/
 .font-1 {
   font-size: 1.1rem;
   font-weight: 400;
+  font-family: 'Open Sans', sans-serif
+}
+
+.font-2 {
+  font-size: 1rem;
+  font-weight: 300;
   font-family: 'Open Sans', sans-serif
 }
 
