--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,12 +4,17 @@
   margin: 0;
 }
 
+a, a:hover {
+  text-decoration: none;
+  color:#fff;
+}
+
 /*font-family: 'Open Sans', sans-serif - 300 - 400 - 700 ;
 font-family: 'Playfair Display', serif; - 400 - 500 - 800 */
 
 
 .font {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   font-weight: 800;
   font-family: 'Playfair Display', serif;
 }
