--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,3 +54,9 @@ font-family: 'Playfair Display', serif; - 400 - 500 - 800 */
     padding: 10px;
   }
 }
+
+@media only screen and (min-width: 0px) and (max-width: 767) { 
+  .footer-adjust-mob {
+    height: '300px'
+  }
+}
