--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,11 +7,32 @@
 a,
 a:hover {
   text-decoration: none;
-  color: inherit ;
+  color: inherit;
 }
+header .menu {
+  background-color: #fafafa;
+}
+
 
 /*font-family: 'Open Sans', sans-serif - 300 - 400 - 700 ;
 font-family: 'Playfair Display', serif; - 400 - 500 - 800 */
+
+.icons-adjust {
+  width: 38px;
+  height: 38px;
+  margin-right: 12px;
+}
+
+.display-section-ads {
+  height: 200px;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.padding-ads {
+  padding-bottom: 15px;
+}
 
 .font {
   font-size: 1.3rem;
@@ -31,7 +52,7 @@ font-family: 'Playfair Display', serif; - 400 - 500 - 800 */
   font-family: "Open Sans", sans-serif;
 }
 
-.display-flex { 
+.display-flex {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -45,13 +66,15 @@ font-family: 'Playfair Display', serif; - 400 - 500 - 800 */
   width: 90%;
   height: 80px;
   margin-bottom: 1.5rem;
-  
+
   display: flex;
   justify-content: center;
   align-items: center;
 
   border-radius: 15px;
-  
+}
+footer nav {
+  height: 270px;
 }
 
 .btn-wp:hover {
@@ -71,7 +94,6 @@ font-family: 'Playfair Display', serif; - 400 - 500 - 800 */
   justify-content: center;
   align-items: center;
   border-radius: 15px;
-
 }
 
 .link-btn-home:hover {
@@ -95,12 +117,18 @@ font-family: 'Playfair Display', serif; - 400 - 500 - 800 */
 }
 /*For Tablets*/
 @media only screen and (min-width: 600px) and (max-width: 1024px) {
+  footer nav {
+    height: 150px;
+    padding: 2rem;
+  }
+  
+
   .btn-wp {
     font-size: 16px;
     width: 70%;
     height: 70px;
   }
-  
+
   .slide-home {
     width: 60vw;
     height: 60vh;
@@ -128,9 +156,28 @@ font-family: 'Playfair Display', serif; - 400 - 500 - 800 */
     text-align: center;
     font-size: 20px;
   }
+
+  .display-section-ads {
+    height: 150px;
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+  }
+
+  .padding-ads {
+    padding-bottom: 10px;
+  }
+
+  .icons-adjust {
+    width: 32px;
+    height: 32px;
+  }
 }
 /*for Laptops and large Devices*/
 @media only screen and (min-width: 1025px) {
+  footer nav {
+    height: 300px;
+  }
   .btn-wp {
     font-size: 17px;
     width: 80%;
@@ -150,7 +197,7 @@ font-family: 'Playfair Display', serif; - 400 - 500 - 800 */
     font-family: "Open Sans", sans-serif;
   }
 
-  .font-2{
+  .font-2 {
     font-size: 17px;
     font-weight: 400;
     font-family: "Open Sans", sans-serif;
@@ -165,5 +212,16 @@ font-family: 'Playfair Display', serif; - 400 - 500 - 800 */
     padding: 10px;
     text-align: center;
     font-size: 16px;
+  }
+ 
+  .display-section-ads {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 150px;
+  }
+  .padding-ads {
+    padding: 0;
   }
 }
